--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
             <p>Местоположение</p>
         </div>
         <nav>
-            <div class="blockGoToAb">
-                <a href="login.html">
-                    Приобрести абонемент
+            <div style="display: flex; align-items: center; justify-content: center;">
+                <a  style="font-weight: 500;
+                font-size: 16px ;margin-right: 50px;
+                color: #000;" href="vhod.html">
+                    Войти
+                </a>
+                <a class="blockGoToAb" style="font-weight: 500;
+                font-size: 16px;padding: 10px 30px;
+                color: #000;" href="login.html">
+                    Регистрация
                 </a>
             </div>
         </nav>
