--- a/password.html
+++ b/password.html
@@ -27,7 +27,7 @@
                 </defs>
                 </svg>
                 </a>
-                <h1>Личный кабинет</h1>
+                <h1>Регистрация</h1>
                 <div class="inputs">
                     <input type="email" placeholder="Email">
                     <input type="password" placeholder="Пароль">
