--- a/price.html
+++ b/price.html
@@ -65,7 +65,7 @@
     <header class="jfsb">
         <p class="ourPrice">Наш прайс-лист</p>
         <a href="profile.html">
-            <img width="50" height="50" src="assets/image 11.png" alt="">
+            <img width="50" height="50" src="assets/Mask group.png" alt="">
         </a>
     </header>
     <main>
