--- a/profile.html
+++ b/profile.html
@@ -26,6 +26,10 @@
                     <p class="aboniment" id="title">Абонемент : СТАНДАРТНЫЙ</p>
                 </div>
             </div>
+            <div class="div" style="margin-top: 10px;display: flex;
+            width: 100%; justify-content: flex-end;"><button style="background: none; outline: none; border: none; cursor: pointer; font-weight: 400;
+font-size: 17px;
+color: #000;" onclick="localStorage.clear(); window.location.href = '/'">выход</button></div>
         </div>
         <div class="private">
             <h1>Личные данные</h1>
