--- a/pay.html
+++ b/pay.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    
     <title>Сбер-оплата</title>
 </head>
 <body>
@@ -33,7 +34,7 @@
                 <img width="100" src="assets/image 15.png">
              </div>
              <div class="bb"></div>
-             <div class="priceTop">
+             <div id="price" class="priceTop">
                 <span>2400,00P   <svg width="13" height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12 1L6.7619 10L1 1" stroke="#20AA5D" stroke-width="2"/>
                     </svg>
@@ -85,6 +86,21 @@
     </main>
 </body>
 <script>
+// Получаем значение из localStorage
+const price = localStorage.getItem('Цена');
+
+// Извлекаем только цифры из значения
+const priceDigits = price.replace(/\D/g, '');
+
+// Устанавливаем только цифры в элемент с id "price"
+document.getElementById('price').innerHTML =` <span id="price">${priceDigits}P   <svg width="13" height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M12 1L6.7619 10L1 1" stroke="#20AA5D" stroke-width="2"/>
+</svg>
+</span>`;
+
+</script>
+<script>
+    
 //Делаем чтобы при вводе номера карты, через каждые 4 символа был пробел
 
     document.getElementById('cardID').addEventListener('input', function (e) {
