--- a/vhod.html
+++ b/vhod.html
@@ -36,7 +36,7 @@
                     <span style="margin-top: 10px;font-weight: 400;
                     font-size: 15px;
                     text-align: center;
-                    color: #000;">Нет аккаунта? <a href="/login.html" style="color: #000;">Регистрация</a></span>
+                    color: #000;">Нет аккаунта? <a href="login.html" style="color: #000;">Регистрация</a></span>
                 </div>
                 
                 <a href="verefyPasswor.html" class="nextStage" onclick="datas()">Продолжить</a>
