--- a/profile.html
+++ b/profile.html
@@ -27,9 +27,9 @@
                 </div>
             </div>
             <div class="div" style="margin-top: 10px;display: flex;
-            width: 100%; justify-content: flex-end;"><button style="background: none; outline: none; border: none; cursor: pointer; font-weight: 400;
+            width: 100%; justify-content: flex-end;"><a style="background: none; outline: none; border: none; cursor: pointer; font-weight: 400;
 font-size: 17px;
-color: #000;" onclick="localStorage.clear(); window.location.href = '/'">выход</button></div>
+color: #000;" onclick="localStorage.clear();" href='index.html'>выход</a></div>
         </div>
         <div class="private">
             <h1>Личные данные</h1>
