--- a/complitePassword.html
+++ b/complitePassword.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Личный кабинет - северное сияние</title>
+    <title>Успех!</title>
 </head>
 <body>
     <header>
@@ -13,11 +13,12 @@
             <img src="assets/Северное сияние.png" width="200" alt="">
         </a>
         </div>
+
     </header>
     <main>
         <div class="loginPls">
 
-            <a href="index.html" class="abs"><svg width="17" height="17" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <a href="profile.html" class="abs"><svg width="17" height="17" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <rect width="21" height="21" fill="url(#pattern0)"/>
                 <defs>
                 <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
@@ -27,45 +28,15 @@
                 </defs>
                 </svg>
                 </a>
-                <h1>Вход</h1>
-                <div class="inputs">
-                    <input type="text" placeholder="Почта">
-                    <input type="password" placeholder="Пароль">
+                <h1>Успешно!</h1>
+                <div class="blockGoToAb" style=" margin: auto;margin-top: 30px; width: fit-content;">
+                    <p href="login.html" style="font-size: 20px;">
+                       Данные успешно обновлены!
+                    </p>
                 </div>
-                <div class="flex">
-                    <span style="margin-top: 10px;font-weight: 400;
-                    font-size: 15px;
-                    text-align: center;
-                    color: #000;">Нет аккаунта? <a href="/login.html" style="color: #000;">Регистрация</a></span>
-                </div>
-                
-                <a href="verefyPasswor.html" class="nextStage" onclick="datas()">Продолжить</a>
+                <a href="profile.html" class="nextStage">В профиль</a>
         </div>
     </main>
 </body>
-<script>
-    function datas() {
-        localStorage.setItem('Фамилия', 'Ващекин')
-        localStorage.setItem('Отчество', 'Сергеевич')
-        localStorage.setItem('Дата_рождения', '23.12.2004')
-        localStorage.setItem('Название', 'СТАНДАРТНЫЙ')
-        localStorage.setItem('Время', 'Время посещения : 8.00 - 22.00')
-        localStorage.setItem('Набор', 'Тренажерный зал, сауна, зона отдыха	')
-        localStorage.setItem('Имя', 'Виктор')
-        localStorage.setItem('Цена', '2400руб/мес')
-    }
-    // Получаем все элементы input
-const inputs = document.querySelectorAll('input');
 
-// Добавляем обработчики для каждого input, и сохраняем их, если спросят куда, то в localstorage, типо берем значения и загружаем их
-inputs.forEach(input => {
-  input.addEventListener('input', (event) => {
-    const value = event.target.value;
-    const placeholder = event.target.placeholder;
-    localStorage.setItem(placeholder, value);
-  });
-});
-
-
-</script>
 </html>
