--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
                     <span style="margin-top: 10px;font-weight: 400;
                     font-size: 15px;
                     text-align: center;
-                    color: #000;">Есть аккаунт? <a href="vhod.html" style="color: #000;">Вход</a></span>
+                    color: #000;">Есть аккаунт? <a href="/vhod.html" style="color: #000;">Вход</a></span>
                 </div>
                 <a href="password.html" class="nextStage">Продолжить</a>
         </div>
