--- a/verefyPasswor.html
+++ b/verefyPasswor.html
@@ -53,7 +53,7 @@
                     </div>
                     <input style="margin-top:0;" type="number" class="postEditD" placeholder="Старая почта">
                 </div>
-                <a href="profile.html" class="nextStage">Продолжить</a>
+                <a href="complitePost.html" class="nextStage">Продолжить</a>
         </div>
     </main>
 </body>
