--- a/edit-password.html
+++ b/edit-password.html
@@ -33,7 +33,7 @@
                     <input type="password" placeholder="Новый пароль">
                     <input id="newPassword" type="password" placeholder="Подтвердите новый пароль">
                 </div>
-                <a href="verefyPasswor.html" class="nextStage">Продолжить</a>
+                <a href="verefyPasswor1.html" class="nextStage">Продолжить</a>
         </div>
     </main>
 </body>
