--- a/profile.html
+++ b/profile.html
@@ -57,7 +57,7 @@ color: #000;" onclick="localStorage.clear();" href="index.html">выход</a></
         </div>
     </main>
     <footer>
-        <div class="back">
+        <div class="back" style="width: 103%;">
             <a href="price.html">Назад</a>
         </div>
     </footer>
